<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colormauve"
    tools:context="com.iiitd.garvita.primequiz.Prime"
    android:weightSum="1">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:paddingLeft="15dp"
        android:layout_marginBottom="0dp"
        android:text="@string/ques"
        android:id="@+id/textView" android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textSize="20dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/yesbutton"
        android:id="@+id/button"
        android:layout_gravity="left|center_vertical"
        android:drawableLeft="@drawable/yes"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/nobutton"
        android:id="@+id/button2"
        android:layout_gravity="center_vertical|right"
        android:drawableRight="@drawable/no"

        />
        </LinearLayout>
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextbutton"
        android:drawableRight="@drawable/next"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="116dp"
            android:layout_height="55dp"
            android:text="@string/show_hint"
            android:id="@+id/button"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="left|center_vertical"
            android:onClick="showHint"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:text="@string/cheat"
            android:id="@+id/button2"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical|right"
            android:onClick="showAnswer"

            />
    </LinearLayout>


</LinearLayout>
